--- a/src/app/classificacao/styles.module.css
+++ b/src/app/classificacao/styles.module.css
@@ -21,6 +21,50 @@
   margin-bottom: 20px;
 }
 
+.showFormButton {
+  background-color: #4c5baf;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin-top: 20px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.showFormButton:hover {
+  background-color: #3e4a8f;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 400px;
+  margin-top: 20px;
+}
+
+.form input {
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.submitButton {
+  background-color: #4c5baf;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.submitButton:hover {
+  background-color: #3e4a8f;
+}
+
 .table {
   width: 100%;
   border-collapse: collapse;
@@ -54,7 +98,8 @@
 }
 
 @media (max-width: 768px) {
-  .table th, .table td {
+  .table th,
+  .table td {
       padding: 8px;
   }
 }
